Bug fix: Removed unnecessary scrollbar

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,5 @@
-
+navigation {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
